--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -23,6 +23,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 0px 200px;
 }
 .nav-title {
     color: black;
@@ -46,4 +47,16 @@ nav li{
     list-style: none;
     margin-right: 50px;
     
+}
+/* header related style */
+.header {
+    background-color:#FFF8F3 ;
+}
+.banner {
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+.profile-pic{
+    width:500px ;
 }
