--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,62 +1,112 @@
 /* Shared styled */
 body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 .common-color {
-    color: #fd6e0a;
+  color: #fd6e0a;
 }
-.common-button{
-    background-color: #fd6e0a;
-    border-radius: 5px;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 700;
-    color: #ffffff;
-    border: none;
-    padding: 18px 35px ;
+.common-button {
+  background-color: #fd6e0a;
+  border-radius: 5px;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  color: #ffffff;
+  border: none;
+  padding: 18px 35px;
 }
-
-
+.section-title {
+  color: #181818;
+  text-align: center;
+  font-size: 35px;
+  font-weight: 700;
+}
+.section-description {
+  color: #757575;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 400;
+}
 
 /* nav related style */
 nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 0px 200px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0px 200px;
 }
 .nav-title {
-    color: black;
-    font-size: 45px;
-    font-style: normal;
-    font-weight: 800;
+  color: black;
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 800;
 }
 nav > ul {
-    display: flex;
-    align-items: center;
-    
+  display: flex;
+  align-items: center;
 }
 nav li a {
-    text-decoration: none;
-    color: #474747;
-    font-style: normal;
-    font-size: 20px;
-    font-weight: 400;
+  text-decoration: none;
+  color: #474747;
+  font-style: normal;
+  font-size: 20px;
+  font-weight: 400;
 }
-nav li{
-    list-style: none;
-    margin-right: 50px;
-    
+nav li {
+  list-style: none;
+  margin-right: 50px;
 }
 /* header related style */
 .header {
-    background-color:#FFF8F3 ;
+  background-color: #fff8f3;
+  background-image: url("../images/header_bg.png");
+  background-repeat: no-repeat;
+  background-position: bottom right;
 }
 .banner {
-    padding: 30px 30px 30px 150px;
-    display: flex;
-    align-items: center;
+  padding: 30px 30px 0px 150px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.profile-pic{
-    width:500px ;
+.banner-content {
+  max-width: 560px;
+}
+.profile-pic {
+  width: 500px;
+  margin-left: 30px;
+}
+.banner-greeting {
+  color: #474747;
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 600;
+  margin-bottom: 0px;
+}
+.banner-title {
+  color: #181818;
+  font-size: 85px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin-top: 5px;
+  margin-bottom: 0px;
+}
+.banner-description {
+  color: #757575;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  margin-top: 20px;
+  margin-bottom: 45px;
+}
+/* Main section style */
+
+/* about me section style */
+.about{
+    background-color: #FFF8F3;
+    padding: 130px;
+    margin:130px 0px ;
+    border-radius: 10px;
 }
