--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -102,11 +102,34 @@ nav li {
   margin-bottom: 45px;
 }
 /* Main section style */
-
+main {
+  max-width: 1140px;
+  margin: 0px auto;
+}
 /* about me section style */
-.about{
-    background-color: #FFF8F3;
-    padding: 130px;
-    margin:130px 0px ;
-    border-radius: 10px;
+.about {
+  background-color: #fff8f3;
+  padding: 130px;
+  margin: 130px 0px;
+  border-radius: 10px;
+}
+.about-info-container {
+  display: flex;
+  justify-content: space-around;
+}
+.about-info {
+  text-align: center;
+}
+.info-title {
+  color: #757575;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 400;
+  margin-bottom: 0px;
+}
+.info-description {
+  color: #474747;
+  font-size: 20px;
+  font-weight: 700;
+  margin-top: 5px;
 }
