--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -28,6 +28,9 @@ body {
   font-size: 18px;
   font-weight: 400;
 }
+section {
+  margin-top: 130px;
+}
 
 /* nav related style */
 nav {
@@ -132,4 +135,73 @@ main {
   font-size: 20px;
   font-weight: 700;
   margin-top: 5px;
+}
+/* Skill related style */
+#what-i-do {
+  padding: 30px 150px;
+}
+.skills-container {
+  display: flex;
+  /* justify-content: space-around; */
+  gap: 24px;
+}
+.skill {
+  padding: 30px;
+  border-radius: 5px;
+  background: #fff;
+  box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+.skill-description {
+  color: #757575;
+  font-size: 16px;
+  font-weight: 400;
+}
+.skill-info {
+  color: #181818;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+/* resume section style */
+.resume-section-header {
+  color: #181818;
+  text-align: center;
+  font-size: 35px;
+  font-weight: 700;
+}
+.resume-container {
+  display: flex;
+  gap: 60px;
+}
+.resume-column-title {
+  color: #474747;
+  font-size: 25px;
+  font-weight: 700;
+  margin-top: 100px;
+}
+.resume-item-title {
+  color: #474747;
+  font-size: 25px;
+  font-weight: 700;
+  margin-bottom:0px;
+}
+.resume-item-institute {
+  color: #757575;
+  font-size: 20px;
+  font-weight: 600;
+  margin-top: 10px;
+  margin-bottom: 18px;
+}
+.resume-item-description {
+  color: #757575;
+  font-size: 16px;
+  font-weight: 400;
+  margin-top: 0px;
+}
+.resume-container hr{
+    margin: 30px ;
+}
+.download-cv{
+    text-align: center;
+    margin-top: 50px;
 }
